--- a/config.json
+++ b/config.json
@@ -1,9 +1,17 @@
 {
-  "apiKey": "AIzaSyDQuc4HvfX4NHl98NT_6VOs4OcquNSVGQM",
-  "authDomain": "test-7ab6b.firebaseapp.com",
-  "databaseURL": "https://test-7ab6b-default-rtdb.firebaseio.com",
-  "projectId": "test-7ab6b",
-  "storageBucket": "test-7ab6b.firebasestorage.app",
-  "messagingSenderId": "615765179356",
-  "appId": "1:615765179356:web:97e52cfba0741ebb8c6d19"
+  "firebaseConfig": {
+    "apiKey": "AIzaSyDQuc4HvfX4NHl98NT_6VOs4OcquNSVGQM",
+    "authDomain": "test-7ab6b.firebaseapp.com",
+    "databaseURL": "https://test-7ab6b-default-rtdb.firebaseio.com",
+    "projectId": "test-7ab6b",
+    "storageBucket": "test-7ab6b.firebasestorage.app",
+    "messagingSenderId": "615765179356",
+    "appId": "1:615765179356:web:97e52cfba0741ebb8c6d19"
+  },
+  "firebaseRules": {
+    "rules": {
+      ".read": "true",
+      ".write": "true"
+    }
+  }
 }
